Added testings and test coverage

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Packages for test task",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "mocha"
   },
   "author": "Yurii Orel",
   "license": "ISC",
